# etlpipeline-local

./: .env copy.example  .env.copy  .env.example  .gitignore  DEPLOYMENT_OPERATIONS_GUIDE.md  DEPLOYMENT_TROUBLESHOOTING.md  DOCKER_DEPLOYMENT_FIX.md  FWC Modern Awards API.postman_collection 1 (1).json  Penalties_MA000120.json  README.md  RULE_ENGINE_UI_IMPLEMENTATION.md  Runtime_issues_fix.txt  USER_STORY_RULE_ENGINE.md  XAP - DEMO ACCOUNT - DEMO ACCOUNT award rules 21_22 18 December 2025.csv  azure-pipelines-api.yml  azure-pipelines-ruleengine.yml  azure-pipelines-ui.yml  azure-pipelines.yml  package-lock.json  pyproject.toml  requirements.txt  run.py  sample_curls.txt  test_penalties_api.py
RuleEngine/: README.md  RuleEngine.sln
RuleEngine/RuleEngine.API/: Program.cs  RuleEngine.API.csproj  RuleEngine.API.http  appsettings.json
RuleEngine/RuleEngine.API/Controllers/: AwardsController.cs  AwardsDetailedController.cs  CalculatedPayRatesController.cs  PenaltiesController.cs  RuleEngineController.cs  RulesController.cs
RuleEngine/RuleEngine.API/Properties/: launchSettings.json
RuleEngine/RuleEngine.Application/: RuleEngine.Application.csproj
RuleEngine/RuleEngine.Application/Interfaces/: IRuleEngineRepository.cs
RuleEngine/RuleEngine.Domain/Entities/: Award.cs  AwardDetailed.cs  AwardRule.cs  CalculatedPayRate.cs  CustomAward.cs  Penalty.cs  Rule.cs  RuleExecutionLog.cs
RuleEngine/RuleEngine.Domain/Enums/: ExecutionStatus.cs  RuleCategory.cs  RuleType.cs
RuleEngine/RuleEngine.Infrastructure/: RuleEngine.Infrastructure.csproj
RuleEngine/RuleEngine.Infrastructure/Configuration/: DatabaseSettings.cs
RuleEngine/RuleEngine.Infrastructure/Data/: DatabaseContext.cs
RuleEngine/RuleEngine.Infrastructure/Repositories/: RuleEngineRepository.cs
RuleEngine/RuleEngine.Tests/: RuleEngine.Tests.csproj
RuleEngine/migrations/: 001_create_tbl_awards_detailed_and_stored_procedures.sql
azure/: function_app.py
docker/: Dockerfile  Dockerfile.ruleengine  Dockerfile.ui  docker-compose.yml  docker-old-compose.yml  entrypoint.sh  server-wrapper.js
docs/: api_documentation.md  awards_detailed_guide.md  awards_summary_vs_detailed.md  azure_migration.md  clause_information_guide.md  config_setup.md  enterprise_scalability_architecture.md  json_rule_engine_guide.md  pay_calculation_implementation_guide.md  pay_calculation_scenarios.md  penalties_integration_guide.md  rule_engine_architecture.md  rule_engine_implementation_summary.md  stored_procedures_documentation.md  tblawardsdetailed_data_structure.md  ui_award_selection_guide.md
k8s/: api-deployment.yaml  namespace.yaml  nginx-deployment.yaml  ruleengine.yaml  ui-deployment.yaml
k8s/nginx/: configmap.yaml  nginx.conf
migrations/: run_migrations.py  testconn.py  testmysqldb.py
migrations/sql/: 001_create_base_tables.sql  001_initial_schema.sql  002_create_etl_tracking_tables.sql  003_create_migration_history.sql  004_create_rules_tables.sql  005_create_stored_procedures.sql  006_create_pay_calculation_tables.sql  007_create_pay_calculation_sp.sql  008_create_penalty_rules_json_tables.sql  009_create_json_rule_engine_sp.sql  010_create_penalties_staging_table.sql
nginx/: nginx.conf  nginx.conf.example
nginx/conf.d/: etl-api.conf
scripts/: check_counts.py  repro_get_stats.py  rerun_award.py
src/: __init__.py  main.py
src/api/: __init__.py  app.py
src/api/routes/: __init__.py  (+4 more)
src/config/: __init__.py  api_endpoints.py  settings 2.py  settings.py
src/core/: __init__.py  interfaces.py  pipeline.py
src/extract/: __init__.py  api_client.py  paginator.py
src/load/: __init__.py  bulk_loader.py  sql_connector.py
src/orchestrator/: __init__.py  pipeline.py  scheduler.py  state_manager.py
src/transform/: __init__.py  base_transformer.py  validators.py
src/utils/: __init__.py  helpers.py  logging.py
tests/: __init__.py  conftest.py  test_config.py  test_core.py  test_pipeline.py  test_transform.py  test_utils.py
ui/: .env.local  .env.production  next.config.js  package-lock.json  package.json
(+64 files in other folders)
