[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fwc-etl-pipeline"
version = "1.0.0"
description = "ETL pipeline for FWC Modern Awards API data extraction and SQL Server loading"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ETL Team", email = "etl@example.com"}
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.25.0",
    "tenacity>=8.2.0",
    "pandas>=2.1.0",
    "sqlalchemy>=2.0.0",
    "pyodbc>=5.0.0",
    "pymssql>=2.2.0",
    "apscheduler>=3.10.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx[http2]>=0.25.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
]

[project.scripts]
etl-run = "src.main:main"
etl-api = "src.api.app:run_server"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
